[package]
name = "raycaster-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
pixels = "0.13"
glam = "0.28"
image = "0.25"
rodio = { version = "0.18", features = ["wav", "flac", "mp3"] }
gilrs = "0.10"            # opcional (control)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"        # o ron = "0.8"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
