[package]
name = "raycaster-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.11"
# Las versiones de pixels+winit suelen ir de la mano. Estas son conservadoras.
winit = "0.28"
pixels = "0.13"


# Utilidades
glam = "0.25"
image = { version = "0.24", features = ["png", "jpeg", "bmp"] }
rodio = { version = "0.17", features = ["mp3", "flac", "vorbis"] }
gilrs = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"